test/resources/parser/failing/BadUnary.scala
object BadUnary
    --x
end BadUnary